opendatahub/spikes/body-based-routing/manifests/envoyfilter.yaml
# GENERATED from profiles/metadata-filter.yaml by render-envoyfilter.sh - do not edit.
# Buffer limit 32MiB. Filter chain, in order:
#   envoy.filters.http.lua
#   envoy.filters.http.json_to_metadata
#   envoy.filters.http.header_mutation
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: model-body-to-header
  namespace: bbr-spike
spec:
  workloadSelector:
    labels:
      gateway.networking.k8s.io/gateway-name: spike-gateway
  configPatches:
  - applyTo: LISTENER
    match:
      context: GATEWAY
    patch:
      operation: MERGE
      value:
        per_connection_buffer_limit_bytes: 33554432
  - applyTo: HTTP_FILTER
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.lua
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
          default_source_code:
            inline_string: "function envoy_on_request(handle)\n  handle:headers():remove(\"x-gateway-model-name\"\
              )\n  handle:clearRouteCache()\nend\n"
  - applyTo: HTTP_FILTER
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.json_to_metadata
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.http.json_to_metadata.v3.JsonToMetadata
          request_rules:
            rules:
            - selectors:
              - key: model
              on_present:
                metadata_namespace: llm
                key: model
            allow_content_types:
            - application/json
  - applyTo: HTTP_FILTER
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.header_mutation
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.http.header_mutation.v3.HeaderMutation
          mutations:
            request_mutations:
            - append:
                header:
                  key: x-gateway-model-name
                  value: '%DYNAMIC_METADATA(llm:model)%'
                append_action: OVERWRITE_IF_EXISTS_OR_ADD
                keep_empty_value: false
